--- a/style.css
+++ b/style.css
@@ -39,4 +39,8 @@ button{
     background-color: blue;
     color:white;
     border:2px solid blue;
+    
+}
+a:hover{
+    background-color: orangered;
 }
