--- a/style.css
+++ b/style.css
@@ -27,9 +27,11 @@ ul{
     padding-left: 40px;
 } */
 .list{
-    display: grid;
+     display: grid; 
     color: aqua;
     padding: 15px 5px 5px 5px;
+    width: 100px;
+    
     
 }
 a{
@@ -38,8 +40,8 @@ a{
 button{
     background-color: blue;
     color:white;
-    border:2px solid blue;
-    
+    border:2px solid black;
+    cursor:pointer;
 }
 a:hover{
     background-color: orangered;
